# whowouldwin

./: .copier-answers.yml  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
src/: manage.py
src/fights/: admin.py  models.py  urls.py  views.py
src/fights/migrations/: 0001_initial.py  0002_vote.py  0003_rename_figther_vote_fighter.py
src/templates/: base.html  fight_detail.html  home.html
src/whowouldwin/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
tests/: test_fights.py  test_whowouldwin.py
